unpackaged/main/default/objects/Staff_Rota__c/Staff_Rota__c.object-meta.xml
<CustomObject>
    <description>Used in EMEA to track at show staff rota</description>
    <label>Staff Rota</label>
    <nameField>
        <displayFormat>SR{0000000}</displayFormat>
        <label>Staff Rota ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Rotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>