unpackaged/main/default/objects/Staff_Rota__c/fields/Exhibition_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Opportunity__c</fullName>
    <formula>Top_Spec__r.Exhibition_Opportunity__c</formula>
    <inlineHelpText>The related Exhibition Opportunity</inlineHelpText>
    <label>Exhibition Opportunity</label>
    <type>Text</type>
</CustomField>