unpackaged/main/default/objects/Staff_Rota__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <inlineHelpText>Please enter the start time eg 0900</inlineHelpText>
    <label>From</label>
    <required>true</required>
    <type>Time</type>
</CustomField>