unpackaged/main/default/objects/Staff_Rota__c/fields/SF_Username__c.field-meta.xml
<CustomField>
    <fullName>SF_Username__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the SF username they will use</inlineHelpText>
    <label>SF Username</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an active user</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Rotas</relationshipName>
    <type>Lookup</type>
</CustomField>