unpackaged/main/default/objects/Staff_Rota__c/fields/SOP_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>SOP_Event_Code__c</fullName>
    <formula>Top_Spec__r.Exhibition_Opportunity__r.SOP_Event_ID__c</formula>
    <inlineHelpText>The Event ID</inlineHelpText>
    <label>SOP Event Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>