unpackaged/main/default/objects/Staff_Rota__c/fields/Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>Staff_Email__c</fullName>
    <inlineHelpText>The staff members email address, dependant on the Staff member</inlineHelpText>
    <label>Staff Email</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Staff_Member__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>susanmayer@outlook.com</fullName>
            </value>
            <value>
                <fullName>cogs16@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>carolyn.akkad@outlook.com</fullName>
            </value>
            <value>
                <fullName>hodgessusan6@gmail.com</fullName>
            </value>
            <value>
                <fullName>alanna.wall@bnc.ox.ac.uk</fullName>
            </value>
            <value>
                <fullName>wallangelaw@googlemail.com</fullName>
            </value>
            <value>
                <fullName>aforangie@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>courtoregan16@gmail.com</fullName>
            </value>
            <value>
                <fullName>deborahcox111@icloud.com</fullName>
            </value>
            <value>
                <fullName>georgemarling@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>georgiepalmer@talktalk.net</fullName>
            </value>
            <value>
                <fullName>helenjwilkes@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>helenm2001@hotmail.com</fullName>
            </value>
            <value>
                <fullName>jacquimartin1950@icloud.com</fullName>
            </value>
            <value>
                <fullName>jacquirobinsons1@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>janicemceachran@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>jasonfryuk@hotmail.com</fullName>
            </value>
            <value>
                <fullName>josie.berns@googlemail.com</fullName>
            </value>
            <value>
                <fullName>lbroad@ges.com</fullName>
            </value>
            <value>
                <fullName>itslisa25@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>lisa.gb@hotmail.com</fullName>
            </value>
            <value>
                <fullName>liz.cox164@gmail.com</fullName>
            </value>
            <value>
                <fullName>liz.devey@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>louisevmuir@aol.com</fullName>
            </value>
            <value>
                <fullName>margaret1_manuel@hotmail.com</fullName>
            </value>
            <value>
                <fullName>sullivanm8@hotmail.co.uk</fullName>
            </value>
            <value>
                <fullName>marling36@btinernet.com</fullName>
            </value>
            <value>
                <fullName>PAMOMAN49@YAHOO.CO.UK</fullName>
            </value>
            <value>
                <fullName>ronnie1961@icloud.com</fullName>
            </value>
            <value>
                <fullName>bibipaiva1997@hotmail.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>