unpackaged/main/default/objects/Staff_Rota__c/fields/Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member__c</fullName>
    <inlineHelpText>Which staff member is working this shift?</inlineHelpText>
    <label>Staff Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alanna Wall</fullName>
            </value>
            <value>
                <fullName>Angie Gay</fullName>
            </value>
            <value>
                <fullName>Carolyn Akkad</fullName>
            </value>
            <value>
                <fullName>Colin Allen</fullName>
            </value>
            <value>
                <fullName>Courtney O&#39;Regan</fullName>
            </value>
            <value>
                <fullName>Debbie Cox</fullName>
            </value>
            <value>
                <fullName>George Marling</fullName>
            </value>
            <value>
                <fullName>George Palmer</fullName>
            </value>
            <value>
                <fullName>Helen Misghinna</fullName>
            </value>
            <value>
                <fullName>Helen Wilkes</fullName>
            </value>
            <value>
                <fullName>Jacqueline Martin</fullName>
            </value>
            <value>
                <fullName>Jacqui Robinson</fullName>
            </value>
            <value>
                <fullName>Janice Mceachran</fullName>
            </value>
            <value>
                <fullName>Jason Fry</fullName>
            </value>
            <value>
                <fullName>Josie Berns</fullName>
            </value>
            <value>
                <fullName>Lauren Broad</fullName>
            </value>
            <value>
                <fullName>Lisa Brain</fullName>
            </value>
            <value>
                <fullName>Lisa	Shelley</fullName>
            </value>
            <value>
                <fullName>Liz Cox</fullName>
            </value>
            <value>
                <fullName>Liz Devey</fullName>
            </value>
            <value>
                <fullName>Louise Muir</fullName>
            </value>
            <value>
                <fullName>Margaret Manuel</fullName>
            </value>
            <value>
                <fullName>Nina	Marling</fullName>
            </value>
            <value>
                <fullName>Pamela Whitehead</fullName>
            </value>
            <value>
                <fullName>Sabrina Paiva</fullName>
            </value>
            <value>
                <fullName>Sarah Jones</fullName>
            </value>
            <value>
                <fullName>Sue Hodges</fullName>
            </value>
            <value>
                <fullName>Sue Welsh</fullName>
            </value>
            <value>
                <fullName>Susan Mayer</fullName>
            </value>
            <value>
                <fullName>Tracy Dunn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>