unpackaged/main/default/objects/Staff_Rota__c/fields/Staff_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Staff_Mobile__c</fullName>
    <inlineHelpText>The staff members mobile number, dependant on the staff member selected</inlineHelpText>
    <label>Staff Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Staff_Member__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>07785 623668</fullName>
            </value>
            <value>
                <fullName>07800 930625</fullName>
            </value>
            <value>
                <fullName>07887 833660</fullName>
            </value>
            <value>
                <fullName>07800 193158</fullName>
            </value>
            <value>
                <fullName>07741 261775</fullName>
            </value>
            <value>
                <fullName>07828 056510</fullName>
            </value>
            <value>
                <fullName>07881 628902</fullName>
            </value>
            <value>
                <fullName>07824 597038</fullName>
            </value>
            <value>
                <fullName>07876 896177</fullName>
            </value>
            <value>
                <fullName>07866 634462</fullName>
            </value>
            <value>
                <fullName>07557 746517</fullName>
            </value>
            <value>
                <fullName>07823 778438</fullName>
            </value>
            <value>
                <fullName>07850 312282</fullName>
            </value>
            <value>
                <fullName>07748 770671</fullName>
            </value>
            <value>
                <fullName>07956 842616</fullName>
            </value>
            <value>
                <fullName>07748 770683</fullName>
            </value>
            <value>
                <fullName>07494 545743</fullName>
            </value>
            <value>
                <fullName>07860 298175</fullName>
            </value>
            <value>
                <fullName>07880 382449</fullName>
            </value>
            <value>
                <fullName>07901 786467</fullName>
            </value>
            <value>
                <fullName>07785 426333</fullName>
            </value>
            <value>
                <fullName>07837 406876</fullName>
            </value>
            <value>
                <fullName>07785 616735</fullName>
            </value>
            <value>
                <fullName>07831 572175</fullName>
            </value>
            <value>
                <fullName>07956 141778</fullName>
            </value>
            <value>
                <fullName>07901 782688</fullName>
            </value>
            <value>
                <fullName>07817 163633</fullName>
            </value>
            <value>
                <fullName>07751 259282</fullName>
            </value>
            <value>
                <fullName>07901 793103</fullName>
            </value>
            <value>
                <fullName>07770 988252</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>