unpackaged/main/default/objects/Staff_Rota__c/fields/Top_Spec__c.field-meta.xml
<CustomField>
    <fullName>Top_Spec__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select the Top Spec this is related to</inlineHelpText>
    <label>Top Spec</label>
    <referenceTo>Top_Spec__c</referenceTo>
    <relationshipLabel>Staff Rotes</relationshipLabel>
    <relationshipName>Staff_Rotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>